-fixed options on firefox

--- a/assets/css/tecaj.css
+++ b/assets/css/tecaj.css
@@ -225,7 +225,6 @@ ul.anim-list li.show {
 .options-form {
   padding: 5px 20px;
   width: 400px;
-  background-color:#fffff0;
   line-height: 1.5em;
 }
 
